# mapmatcher

./: .gitignore  .pypirc  README.md  conftest.py  pyproject.toml
.github/workflows/: aequilibrae_update.yml  build.yml  documentation.yml  scheduled_test.yml  testing.yml
docs/: Makefile  make.bat  requirements_docs.txt
docs/source/: api.rst  api_reference.md  conf.py  detailed_documentation.rst  index.md  index.rst
docs/source/examples/: plot_aequilibrae_example.py  plot_general_example.py  readme.md  readme.rst
mapmatcher/: __init__.py  linebearing.py  map_matcher.py  network.py  parameters.py  run_chunk.py  stop_finder.py  trip.py
mapmatcher/utils/: __init__.py  check_if_aligned.py
tests/: requirements_test.txt  setup_windows_spatialite.py  test_check_if_aligned.py  test_line_bearing.py  test_mapmatcher.py  test_stop_finder.py  test_trip.py  test_trip_map_match.py
